Bug 511814 - Icons-Only Task Manager grouped textual list focus issue
Summary: Icons-Only Task Manager grouped textual list focus issue
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.5.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-08 09:56 UTC by Nik
Modified: 2025-11-19 16:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments
Video showing the problem and the temporary solution (1.98 MB, video/mp4)
2025-11-08 09:56 UTC, Nik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nik 2025-11-08 09:56:35 UTC
Created attachment 186608 [details]
Video showing the problem and the temporary solution

SUMMARY


STEPS TO REPRODUCE
1. Have Icons-Only Task Manager with "Clicking grouped task" behavior set to "Shows textual list" and have System Settings -> Window Behavior -> Focus -> "Focus stealing prevention" set to "Medium"
2. Open a window that covers the whole screen (for example, Firefox browser)
3. Clicked on a grouped icon to view the textual list.

OBSERVED RESULT
List of grouped tasks will not appear, or it will appear, but below the focused window. Having System Settings as a focused window does not have this issue for some reason. Changing to "Shows small window previews" works as expected (shows above the focused window).


EXPECTED RESULT
List of group tasks to appear above the focused window.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo
KDE Plasma Version: 6.5.2
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.3

ADDITIONAL INFORMATION
Setting System Settings -> Window Behavior -> Focus -> "Focus stealing prevention" to "Low" resolves the issue, but judging by how the other behaviors work as expected on "Medium" setting, it seems like its an issue of the textual list behavior.
Comment 1 Bug Janitor Service 2025-11-19 10:27:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1394
Comment 2 David Redondo 2025-11-19 12:45:34 UTC
Git commit 506010edaea2ac9300e6ba425be465be15a8a18d by David Redondo.
Committed on 19/11/2025 at 12:42.
Pushed by davidre into branch 'master'.

Make PopupPlasmaWindow take focus

Otherwise wayland integration will set q_showWithoutActivating
resulting in broken activation for such windows.
FIXED-IN:6.5.4

M  +1    -0    src/declarativeimports/core/tooltipdialog.cpp
M  +3    -0    src/plasmaquick/popupplasmawindow.cpp

https://invent.kde.org/plasma/libplasma/-/commit/506010edaea2ac9300e6ba425be465be15a8a18d
Comment 3 David Redondo 2025-11-19 12:51:04 UTC
Git commit aac2ff5158f74f8f58b4951bf741137c7ccf9428 by David Redondo.
Committed on 19/11/2025 at 12:47.
Pushed by davidre into branch 'Plasma/6.5'.

Make PopupPlasmaWindow take focus

Otherwise wayland integration will set q_showWithoutActivating
resulting in broken activation for such windows.
FIXED-IN:6.5.4


(cherry picked from commit 506010edaea2ac9300e6ba425be465be15a8a18d)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -0    src/declarativeimports/core/tooltipdialog.cpp
M  +3    -0    src/plasmaquick/popupplasmawindow.cpp

https://invent.kde.org/plasma/libplasma/-/commit/aac2ff5158f74f8f58b4951bf741137c7ccf9428