Make PopupPlasmaWindow take focus

Otherwise wayland integration will set q_showWithoutActivating
resulting in broken activation for such windows.
BUG:511814
FIXED-IN:6.5.4